--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@livekit/components-react": "^2.0.0",
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "cheerio": "^1.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "livekit-client": "^2.0.0",
