--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,14 @@
   package = "@netlify/plugin-nextjs"
 
 [functions]
+  external_node_modules = ["livekit-server-sdk", "openai", "sharp"]
   node_bundler = "esbuild"
+
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/___netlify-handler"
+  status = 200
+  force = true
 
 [[headers]]
   for = "/*"
