Rebrand to ThinkFast Arena and clean up documentation
- Rename project from Arena of Consciousness to ThinkFast Arena
- Update all branding across app, README, and instructions
- Make landing page title bolder for better visibility
- Remove outdated documentation files
- Update package.json and metadata
- Add new instructions page component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arena-of-consciousness-v5",
+  "name": "thinkfast-arena-v5",
   "version": "0.1.0",
   "private": true,
   "scripts": {
